syntax = "proto3";

package com.phoenix.message.proto;

import "task_service/provider/task_config.proto";
option java_multiple_files = true;

message RpcFindTaskConfigListReq {
  int32 id = 1;
  string app_name = 2;
  int32 type = 3;
  int32 status = 4;
  int32 create_time_begin = 5;
  int32 create_time_end = 6;
  int32 page = 7;
  int32 page_size = 8;
}

message RpcFindTaskConfigListResp {
  int32 code = 1;
  string msg = 2;
  RpcPaginationResult data = 3;
}

message RpcPaginationResult {
  int32 total_count = 1;
  repeated RpcTaskConfig list = 2;
}
